@@ -30,7 +30,6 @@ import com.facebook.buck.rules.DefaultSourcePathResolver;
 import com.facebook.buck.rules.DefaultTargetNodeToBuildRuleTransformer;
 import com.facebook.buck.rules.FakeOnDiskBuildInfo;
 import com.facebook.buck.rules.FakeSourcePath;
-import com.facebook.buck.rules.PathSourcePath;
 import com.facebook.buck.rules.RuleKey;
 import com.facebook.buck.rules.SingleThreadedBuildRuleResolver;
 import com.facebook.buck.rules.SourcePathResolver;
@@ -70,14 +69,13 @@ public class AndroidResourceTest {
 
           TargetNode<?, ?> resourceNode =
               AndroidResourceBuilder.createBuilder(buildTarget, projectFilesystem)
-                  .setRes(new FakeSourcePath(projectFilesystem, "java/src/com/facebook/base/res"))
+                  .setRes(FakeSourcePath.of(projectFilesystem, "java/src/com/facebook/base/res"))
                   .setRDotJavaPackage("com.facebook")
                   .setAssets(
-                      new FakeSourcePath(projectFilesystem, "java/src/com/facebook/base/assets"))
+                      FakeSourcePath.of(projectFilesystem, "java/src/com/facebook/base/assets"))
                   .setManifest(
-                      new PathSourcePath(
-                          projectFilesystem,
-                          Paths.get("java/src/com/facebook/base/AndroidManifest.xml")))
+                      FakeSourcePath.of(
+                          projectFilesystem, "java/src/com/facebook/base/AndroidManifest.xml"))
                   .build();
 
           TargetGraph targetGraph = TargetGraphFactory.newInstance(resourceNode);
@@ -134,9 +132,9 @@ public class AndroidResourceTest {
             params,
             ruleFinder,
             /* deps */ ImmutableSortedSet.of(),
-            new FakeSourcePath("foo/res"),
+            FakeSourcePath.of("foo/res"),
             ImmutableSortedMap.of(
-                Paths.get("values/strings.xml"), new FakeSourcePath("foo/res/values/strings.xml")),
+                Paths.get("values/strings.xml"), FakeSourcePath.of("foo/res/values/strings.xml")),
             /* rDotJavaPackage */ "com.example.android",
             /* assets */ null,
             /* assetsSrcs */ ImmutableSortedMap.of(),
@@ -169,14 +167,13 @@ public class AndroidResourceTest {
             params,
             ruleFinder,
             /* deps */ ImmutableSortedSet.of(),
-            new FakeSourcePath("foo/res"),
+            FakeSourcePath.of("foo/res"),
             ImmutableSortedMap.of(
-                Paths.get("values/strings.xml"), new FakeSourcePath("foo/res/values/strings.xml")),
+                Paths.get("values/strings.xml"), FakeSourcePath.of("foo/res/values/strings.xml")),
             /* rDotJavaPackage */ null,
             /* assets */ null,
             /* assetsSrcs */ ImmutableSortedMap.of(),
-            /* manifestFile */ new PathSourcePath(
-                projectFilesystem, Paths.get("foo/AndroidManifest.xml")),
+            /* manifestFile */ FakeSourcePath.of(projectFilesystem, "foo/AndroidManifest.xml"),
             /* hasWhitelistedStrings */ false);
     projectFilesystem.writeContentsToPath(
         "com.ex.pkg\n", resolver.getRelativePath(androidResource.getPathToRDotJavaPackageFile()));
@@ -191,7 +188,7 @@ public class AndroidResourceTest {
 
     TargetNode<?, ?> depNode =
         AndroidResourceBuilder.createBuilder(BuildTargetFactory.newInstance("//:dep"), filesystem)
-            .setManifest(new FakeSourcePath("manifest"))
+            .setManifest(FakeSourcePath.of("manifest"))
             .setRes(Paths.get("res"))
             .build();
     TargetNode<?, ?> resourceNode =
