@@ -39,11 +39,11 @@ public class RuleUtilsTest {
   public void extractGroupedSources() {
     ImmutableList<SourceWithFlags> input =
         ImmutableList.of(
-            SourceWithFlags.of(new FakeSourcePath("Group1/foo.m")),
-            SourceWithFlags.of(new FakeSourcePath("Group1/bar.m"), ImmutableList.of("-Wall")),
-            SourceWithFlags.of(new FakeSourcePath("Group2/baz.m")),
+            SourceWithFlags.of(FakeSourcePath.of("Group1/foo.m")),
+            SourceWithFlags.of(FakeSourcePath.of("Group1/bar.m"), ImmutableList.of("-Wall")),
+            SourceWithFlags.of(FakeSourcePath.of("Group2/baz.m")),
             SourceWithFlags.of(
-                new FakeSourcePath("Group2/blech.m"), ImmutableList.of("-fobjc-arc")));
+                FakeSourcePath.of("Group2/blech.m"), ImmutableList.of("-fobjc-arc")));
 
     SourcePathResolver resolver =
         DefaultSourcePathResolver.from(
@@ -66,18 +66,18 @@ public class RuleUtilsTest {
                 ImmutableList.of(
                     GroupedSource.ofSourceWithFlags(
                         SourceWithFlags.of(
-                            new FakeSourcePath("Group1/bar.m"), ImmutableList.of("-Wall"))),
+                            FakeSourcePath.of("Group1/bar.m"), ImmutableList.of("-Wall"))),
                     GroupedSource.ofSourceWithFlags(
-                        SourceWithFlags.of(new FakeSourcePath("Group1/foo.m"))))),
+                        SourceWithFlags.of(FakeSourcePath.of("Group1/foo.m"))))),
             GroupedSource.ofSourceGroup(
                 "Group2",
                 Paths.get("Group2"),
                 ImmutableList.of(
                     GroupedSource.ofSourceWithFlags(
-                        SourceWithFlags.of(new FakeSourcePath("Group2/baz.m"))),
+                        SourceWithFlags.of(FakeSourcePath.of("Group2/baz.m"))),
                     GroupedSource.ofSourceWithFlags(
                         SourceWithFlags.of(
-                            new FakeSourcePath("Group2/blech.m"),
+                            FakeSourcePath.of("Group2/blech.m"),
                             ImmutableList.of("-fobjc-arc")))))),
         sources);
   }
@@ -86,13 +86,13 @@ public class RuleUtilsTest {
   public void creatingGroupsFromSourcePaths() {
     ImmutableList<SourcePath> input =
         ImmutableList.of(
-            new FakeSourcePath("File.h"),
-            new FakeSourcePath("Lib/Foo/File2.h"),
-            new FakeSourcePath("App/Foo/File.h"),
-            new FakeSourcePath("Lib/Bar/File1.h"),
-            new FakeSourcePath("App/File.h"),
-            new FakeSourcePath("Lib/Foo/File1.h"),
-            new FakeSourcePath("App/Foo/Bar/File.h"));
+            FakeSourcePath.of("File.h"),
+            FakeSourcePath.of("Lib/Foo/File2.h"),
+            FakeSourcePath.of("App/Foo/File.h"),
+            FakeSourcePath.of("Lib/Bar/File1.h"),
+            FakeSourcePath.of("App/File.h"),
+            FakeSourcePath.of("Lib/Foo/File1.h"),
+            FakeSourcePath.of("App/Foo/Bar/File.h"));
 
     ImmutableList<GroupedSource> expected =
         ImmutableList.of(
@@ -109,9 +109,9 @@ public class RuleUtilsTest {
                                 Paths.get("App/Foo/Bar"),
                                 ImmutableList.of(
                                     GroupedSource.ofPrivateHeader(
-                                        new FakeSourcePath("App/Foo/Bar/File.h")))),
-                            GroupedSource.ofPrivateHeader(new FakeSourcePath("App/Foo/File.h")))),
-                    GroupedSource.ofPrivateHeader(new FakeSourcePath("App/File.h")))),
+                                        FakeSourcePath.of("App/Foo/Bar/File.h")))),
+                            GroupedSource.ofPrivateHeader(FakeSourcePath.of("App/Foo/File.h")))),
+                    GroupedSource.ofPrivateHeader(FakeSourcePath.of("App/File.h")))),
             GroupedSource.ofSourceGroup(
                 "Lib",
                 Paths.get("Lib"),
@@ -120,15 +120,14 @@ public class RuleUtilsTest {
                         "Bar",
                         Paths.get("Lib/Bar"),
                         ImmutableList.of(
-                            GroupedSource.ofPrivateHeader(new FakeSourcePath("Lib/Bar/File1.h")))),
+                            GroupedSource.ofPrivateHeader(FakeSourcePath.of("Lib/Bar/File1.h")))),
                     GroupedSource.ofSourceGroup(
                         "Foo",
                         Paths.get("Lib/Foo"),
                         ImmutableList.of(
-                            GroupedSource.ofPrivateHeader(new FakeSourcePath("Lib/Foo/File1.h")),
-                            GroupedSource.ofPrivateHeader(
-                                new FakeSourcePath("Lib/Foo/File2.h")))))),
-            GroupedSource.ofPrivateHeader(new FakeSourcePath("File.h")));
+                            GroupedSource.ofPrivateHeader(FakeSourcePath.of("Lib/Foo/File1.h")),
+                            GroupedSource.ofPrivateHeader(FakeSourcePath.of("Lib/Foo/File2.h")))))),
+            GroupedSource.ofPrivateHeader(FakeSourcePath.of("File.h")));
 
     SourcePathResolver resolver =
         DefaultSourcePathResolver.from(
@@ -151,9 +150,9 @@ public class RuleUtilsTest {
   public void creatingGroupsFromSourcePathsRemovesLongestCommonPrefix() {
     ImmutableList<SourcePath> input =
         ImmutableList.of(
-            new FakeSourcePath("Lib/Foo/File1.h"),
-            new FakeSourcePath("Lib/Foo/File2.h"),
-            new FakeSourcePath("Lib/Bar/File1.h"));
+            FakeSourcePath.of("Lib/Foo/File1.h"),
+            FakeSourcePath.of("Lib/Foo/File2.h"),
+            FakeSourcePath.of("Lib/Bar/File1.h"));
 
     ImmutableList<GroupedSource> expected =
         ImmutableList.of(
@@ -161,13 +160,13 @@ public class RuleUtilsTest {
                 "Bar",
                 Paths.get("Lib/Bar"),
                 ImmutableList.of(
-                    GroupedSource.ofPrivateHeader(new FakeSourcePath("Lib/Bar/File1.h")))),
+                    GroupedSource.ofPrivateHeader(FakeSourcePath.of("Lib/Bar/File1.h")))),
             GroupedSource.ofSourceGroup(
                 "Foo",
                 Paths.get("Lib/Foo"),
                 ImmutableList.of(
-                    GroupedSource.ofPrivateHeader(new FakeSourcePath("Lib/Foo/File1.h")),
-                    GroupedSource.ofPrivateHeader(new FakeSourcePath("Lib/Foo/File2.h")))));
+                    GroupedSource.ofPrivateHeader(FakeSourcePath.of("Lib/Foo/File1.h")),
+                    GroupedSource.ofPrivateHeader(FakeSourcePath.of("Lib/Foo/File2.h")))));
 
     SourcePathResolver resolver =
         DefaultSourcePathResolver.from(
@@ -188,10 +187,10 @@ public class RuleUtilsTest {
 
   @Test
   public void creatingGroupsFromSingleSourcePath() {
-    ImmutableList<SourcePath> input = ImmutableList.of(new FakeSourcePath("Lib/Foo/File1.h"));
+    ImmutableList<SourcePath> input = ImmutableList.of(FakeSourcePath.of("Lib/Foo/File1.h"));
 
     ImmutableList<GroupedSource> expected =
-        ImmutableList.of(GroupedSource.ofPrivateHeader(new FakeSourcePath("Lib/Foo/File1.h")));
+        ImmutableList.of(GroupedSource.ofPrivateHeader(FakeSourcePath.of("Lib/Foo/File1.h")));
 
     SourcePathResolver resolver =
         DefaultSourcePathResolver.from(
@@ -246,23 +245,23 @@ public class RuleUtilsTest {
         ImmutableMultimap.<Path, GroupedSource>builder()
             .put(
                 Paths.get("root/Lib/Foo"),
-                GroupedSource.ofPrivateHeader(new FakeSourcePath("Lib/Foo/File2.h")))
+                GroupedSource.ofPrivateHeader(FakeSourcePath.of("Lib/Foo/File2.h")))
             .put(
                 Paths.get("root/App/Foo"),
-                GroupedSource.ofPrivateHeader(new FakeSourcePath("App/Foo/File.h")))
+                GroupedSource.ofPrivateHeader(FakeSourcePath.of("App/Foo/File.h")))
             .put(
                 Paths.get("root/App"),
-                GroupedSource.ofPrivateHeader(new FakeSourcePath("App/File.h")))
-            .put(Paths.get("root"), GroupedSource.ofPrivateHeader(new FakeSourcePath("File.h")))
+                GroupedSource.ofPrivateHeader(FakeSourcePath.of("App/File.h")))
+            .put(Paths.get("root"), GroupedSource.ofPrivateHeader(FakeSourcePath.of("File.h")))
             .put(
                 Paths.get("root/Lib/Bar"),
-                GroupedSource.ofPrivateHeader(new FakeSourcePath("Lib/Bar/File1.h")))
+                GroupedSource.ofPrivateHeader(FakeSourcePath.of("Lib/Bar/File1.h")))
             .put(
                 Paths.get("root/Lib/Foo"),
-                GroupedSource.ofPrivateHeader(new FakeSourcePath("Lib/Foo/File1.h")))
+                GroupedSource.ofPrivateHeader(FakeSourcePath.of("Lib/Foo/File1.h")))
             .put(
                 Paths.get("root/App/Foo/Bar"),
-                GroupedSource.ofPrivateHeader(new FakeSourcePath("App/Foo/Bar/File.h")))
+                GroupedSource.ofPrivateHeader(FakeSourcePath.of("App/Foo/Bar/File.h")))
             .build();
 
     ImmutableList<GroupedSource> expected =
@@ -280,9 +279,9 @@ public class RuleUtilsTest {
                                 Paths.get("App/Foo/Bar"),
                                 ImmutableList.of(
                                     GroupedSource.ofPrivateHeader(
-                                        new FakeSourcePath("App/Foo/Bar/File.h")))),
-                            GroupedSource.ofPrivateHeader(new FakeSourcePath("App/Foo/File.h")))),
-                    GroupedSource.ofPrivateHeader(new FakeSourcePath("App/File.h")))),
+                                        FakeSourcePath.of("App/Foo/Bar/File.h")))),
+                            GroupedSource.ofPrivateHeader(FakeSourcePath.of("App/Foo/File.h")))),
+                    GroupedSource.ofPrivateHeader(FakeSourcePath.of("App/File.h")))),
             GroupedSource.ofSourceGroup(
                 "Lib",
                 Paths.get("Lib"),
@@ -291,15 +290,14 @@ public class RuleUtilsTest {
                         "Bar",
                         Paths.get("Lib/Bar"),
                         ImmutableList.of(
-                            GroupedSource.ofPrivateHeader(new FakeSourcePath("Lib/Bar/File1.h")))),
+                            GroupedSource.ofPrivateHeader(FakeSourcePath.of("Lib/Bar/File1.h")))),
                     GroupedSource.ofSourceGroup(
                         "Foo",
                         Paths.get("Lib/Foo"),
                         ImmutableList.of(
-                            GroupedSource.ofPrivateHeader(new FakeSourcePath("Lib/Foo/File1.h")),
-                            GroupedSource.ofPrivateHeader(
-                                new FakeSourcePath("Lib/Foo/File2.h")))))),
-            GroupedSource.ofPrivateHeader(new FakeSourcePath("File.h")));
+                            GroupedSource.ofPrivateHeader(FakeSourcePath.of("Lib/Foo/File1.h")),
+                            GroupedSource.ofPrivateHeader(FakeSourcePath.of("Lib/Foo/File2.h")))))),
+            GroupedSource.ofPrivateHeader(FakeSourcePath.of("File.h")));
 
     SourcePathResolver resolver =
         DefaultSourcePathResolver.from(
@@ -329,13 +327,13 @@ public class RuleUtilsTest {
         ImmutableMultimap.<Path, GroupedSource>builder()
             .put(
                 Paths.get("root/Lib/Foo"),
-                GroupedSource.ofPrivateHeader(new FakeSourcePath("Lib/Foo/File2.h")))
+                GroupedSource.ofPrivateHeader(FakeSourcePath.of("Lib/Foo/File2.h")))
             .put(
                 Paths.get("root/Lib/Bar"),
-                GroupedSource.ofPrivateHeader(new FakeSourcePath("Lib/Bar/File1.h")))
+                GroupedSource.ofPrivateHeader(FakeSourcePath.of("Lib/Bar/File1.h")))
             .put(
                 Paths.get("root/Lib/Foo"),
-                GroupedSource.ofPrivateHeader(new FakeSourcePath("Lib/Foo/File1.h")))
+                GroupedSource.ofPrivateHeader(FakeSourcePath.of("Lib/Foo/File1.h")))
             .build();
 
     ImmutableList<GroupedSource> expected =
@@ -348,14 +346,14 @@ public class RuleUtilsTest {
                         "Bar",
                         Paths.get("Lib/Bar"),
                         ImmutableList.of(
-                            GroupedSource.ofPrivateHeader(new FakeSourcePath("Lib/Bar/File1.h")))),
+                            GroupedSource.ofPrivateHeader(FakeSourcePath.of("Lib/Bar/File1.h")))),
                     GroupedSource.ofSourceGroup(
                         "Foo",
                         Paths.get("Lib/Foo"),
                         ImmutableList.of(
-                            GroupedSource.ofPrivateHeader(new FakeSourcePath("Lib/Foo/File1.h")),
+                            GroupedSource.ofPrivateHeader(FakeSourcePath.of("Lib/Foo/File1.h")),
                             GroupedSource.ofPrivateHeader(
-                                new FakeSourcePath("Lib/Foo/File2.h")))))));
+                                FakeSourcePath.of("Lib/Foo/File2.h")))))));
 
     SourcePathResolver resolver =
         DefaultSourcePathResolver.from(
@@ -378,10 +376,10 @@ public class RuleUtilsTest {
     ImmutableMultimap<Path, String> subgroups = ImmutableMultimap.of();
     ImmutableMultimap<Path, GroupedSource> entries =
         ImmutableMultimap.of(
-            Paths.get("root"), GroupedSource.ofPrivateHeader(new FakeSourcePath("File1.h")));
+            Paths.get("root"), GroupedSource.ofPrivateHeader(FakeSourcePath.of("File1.h")));
 
     ImmutableList<GroupedSource> expected =
-        ImmutableList.of(GroupedSource.ofPrivateHeader(new FakeSourcePath("File1.h")));
+        ImmutableList.of(GroupedSource.ofPrivateHeader(FakeSourcePath.of("File1.h")));
 
     SourcePathResolver resolver =
         DefaultSourcePathResolver.from(
